--- a/jersey-client/pom.xml
+++ b/jersey-client/pom.xml
@@ -45,7 +45,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.sun.jersey</groupId>
+        <groupId>com.github.avianey.android-jersey-client</groupId>
         <artifactId>jersey-project</artifactId>
         <version>1.17.1</version>
     </parent>
@@ -53,56 +53,12 @@
     <packaging>jar</packaging>
     <name>jersey-client</name>
 
-    <profiles>
-        <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <configuration>
-                            <links>
-                                <link>http://jsr311.java.net/nonav/releases/1.1</link>
-                            </links>
-                            <excludePackageNames>com.sun.jersey.client.impl com.sun.ws.rs.ex</excludePackageNames>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>cobertura</id>
-            <activation>
-                <property>
-                    <name>cobertura</name>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>com.sun.jersey</groupId>
-                    <artifactId>jersey-core</artifactId>
-                    <version>${project.version}</version>
-                    <classifier>cobertura</classifier>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>default</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>com.sun.jersey</groupId>
-                    <artifactId>jersey-core</artifactId>
-                    <version>${project.version}</version>
-                </dependency>
-            </dependencies>
-        </profile>
-    </profiles>
-
     <dependencies>
+		<dependency>
+			<groupId>com.github.avianey.android-jersey-client</groupId>
+			<artifactId>jersey-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -141,19 +97,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Import-Package>javax.mail.*;resolution:=optional, *</Import-Package>
-                        <Export-Package>com.sun.jersey.api.client.*,com.sun.jersey.client.*,com.sun.ws.rs.ext</Export-Package>
-                    </instructions>
-                    <unpackBundle>true</unpackBundle>
-                </configuration>
             </plugin>
 
             <plugin>
