--- a/jersey-core/pom.xml
+++ b/jersey-core/pom.xml
@@ -44,13 +44,14 @@
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.sun.jersey</groupId>
+        <groupId>com.github.avianey.android-jersey-client</groupId>
         <artifactId>jersey-project</artifactId>
         <version>1.17.1</version>
     </parent>
     <artifactId>jersey-core</artifactId>
     <packaging>jar</packaging>
     <name>jersey-core</name>
+	
     <dependencies>
         <dependency>
             <groupId>javax.ws.rs</groupId>
@@ -82,26 +83,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <profiles>
-        <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <configuration>
-                            <links>
-                                <link>http://jsr311.java.net/nonav/releases/1.1</link>
-                            </links>
-                            <excludePackageNames>com.sun.jersey.core.impl:com.sun.jersey.impl</excludePackageNames>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
     <build>
 
@@ -204,24 +185,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Export-Package>javax.ws.rs.*;-split-package:=merge-first,com.sun.jersey.*;-split-package:=merge-first</Export-Package>
-                        <Import-Package>!javax.ws.rs.*,javax.mail.*;resolution:=optional, *</Import-Package>
-                        <Bundle-Activator>com.sun.jersey.core.osgi.Activator</Bundle-Activator>
-                        <DynamicImport-Package>*</DynamicImport-Package>
-                        <Private-Package>com.sun.jersey.core.osgi;-split-package:=merge-first</Private-Package>
-                        <Implementation-Title>jersey-core osgi</Implementation-Title>
-                        <Implementation-Version>${project.version}</Implementation-Version>
-                    </instructions>
-                    <unpackBundle>true</unpackBundle>
-                </configuration>
             </plugin>
 
             <plugin>
