--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.sun.jersey</groupId>
+    <groupId>com.github.avianey.android-jersey-client</groupId>
     <artifactId>jersey-project</artifactId>
     <version>1.17.1</version>
     <packaging>pom</packaging>
@@ -68,8 +68,8 @@
         </license>
     </licenses>
     <modules>
-        <module>jersey-client</module>
         <module>jersey-core</module>
+        <module>jersey-client</module>
     </modules>
 
     <build>
