--- a/jersey-core/pom.xml
+++ b/jersey-core/pom.xml
@@ -44,7 +44,7 @@
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.avianey.android-jersey-client</groupId>
+        <groupId>fr.avianey.android-jersey-client</groupId>
         <artifactId>jersey-project</artifactId>
         <version>1.17.1</version>
     </parent>
