--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.avianey.android-jersey-client</groupId>
+    <groupId>fr.avianey.android-jersey-client</groupId>
     <artifactId>jersey-project</artifactId>
     <version>1.17.1</version>
     <packaging>pom</packaging>
